--- a/main.css
+++ b/main.css
@@ -11,20 +11,20 @@ div {
   border-color: #f00;
 }
 #orange { /* this selects any elements with the red id */
-  border-top-color: #ffa500;
+  border-color: #ffa500;
 }
 #yellow { /* this selects any elements with the red id */
-  border-top-color: #ff0;
+  border-color: #ff0;
 }
 #green { /* this selects any elements with the red id */
-  border-top-color: #00bc3f;
+  border-color: #00bc3f;
 }
 #blue { /* this selects any elements with the red id */
-  border-top-color: #06f;
+  border-color: #06f;
 }
 #indigo { /* this selects any elements with the red id */
-  border-top-color: #8a2be2;
+  border-color: #8a2be2;
 }
 #violet { /* this selects any elements with the red id */
-  border-top-color: #d300c9;
+  border-color: #d300c9;
 }
