--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ div {
 }
 
 #red { /* this selects any elements with the red id */
-  border-color: #f00;
+  border-top-color: #f00;
 }
 #orange { /* this selects any elements with the red id */
   border-color: #ffa500;
