--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ div {
   border-top-color: #f00;
 }
 #orange { /* this selects any elements with the red id */
-  border-color: #ffa500;
+  border--color: #ffa500;
 }
 #yellow { /* this selects any elements with the red id */
   border-color: #ff0;
